syntax = "proto3";

package pb;

option go_package = "./pb";

// Verification response messages
message VerifyEmailResponse {
  string message = 1;
}
